# QuickShell

./: .bazelrc  .gitignore  MODULE.bazel  README.md  WORKSPACE
common/: BUILD  logger.cc
common/include/: exceptions.hh
docs/: doc_force_wifi_connection.md  doc_pack_parse_packet_flows.md  doc_quick_fuzz.md  doc_quick_shell.md  doc_quick_sniff.md  doc_send_file_with_bypass.md  doc_send_packets.md
fuzzing/: BUILD
logger/: BUILD  logger.cc
logger/include/: logger.h  logger.hh
quick_fuzz/: BUILD  harness_main.cc  harness_mutations.cc  harness_offline_frames_validator.cc  quick_share_fuzzing_patches.cc  test_case.cc
quick_fuzz/include/: harness_offline_frames_validator.hh
quick_fuzz/winafl_clone_and_patch/: afl_fuzz_no_trimming.patch  clone_and_patch_winafl.bat
quick_share/: BUILD  quick_share_connection.cc  quick_share_medium.cc
quick_share/include/: exceptions.hh  quick_share_connection.hh  quick_share_medium.hh
quick_share/proto/: offline_wire_formats.proto  offline_wire_formats_original.proto  wire_format.proto  wire_format_original.proto
quick_shell_rce_tool/: BUILD  config_tools.py  domain_path.py  downloadable_file.py  https_domain_path_monitor.py  mitm_sniffer.py  popular_files.yaml  quick_share_actions.py  quick_share_discovery.py  quick_shell.py  real_time_tcp_data_counter.py  requirements.txt  utils.py
tools/: BUILD  force_wifi_connection.cc  offline_frames_storage.cc  pack_packet_flows.py  parse_packet_flows.py  quick_sniff.cc  send_file_with_bypass.cc  send_packets.cc  utils.cc
tools/fuzzing/: harness_main.cc  harness_mutations.cc  harness_offline_frames_validator.cc  test_case.cc
tools/include/: offline_frames_storage.hh  utils.hh
(+9 files in other folders)
