###############################################################################
# Bazel now uses Bzlmod by default to manage external dependencies.
# Please consider migrating your external dependencies from WORKSPACE to MODULE.bazel.
#
# For more details, please check https://github.com/bazelbuild/bazel/issues/18958
###############################################################################

bazel_dep(name = "protobuf", version = "27.1", repo_name = "com_google_protobuf")
bazel_dep(name = "argparse", version = "3.0.0")
bazel_dep(name = "nlohmann_json", version = "3.11.3")
bazel_dep(name = "libprotobuf-mutator", version = "1.3")